# package_it

./: README.md  pyproject.toml
src/package_it.egg-info/: PKG-INFO  SOURCES.txt
src/package_it/package_it.egg-info/: SOURCES.txt
src/package_it/tool1/: tool1.py
