[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package_it"
version = "0.1.0"
description = "dealing with packages in python"
authors = [
    { name = "Cihan Sahin", email = "cihan.sahin98@hotmail.com"}
]
dependencies = [
]


[tool.setuptools]
package-dir = {"" = "src/package_it"}
packages = ["utils"] 